force-app/main/default/objects/ATC_Communication__c/ATC_Communication__c.object-meta.xml
<CustomObject>
    <label>ATC Communication</label>
    <nameField>
        <displayFormat>ATC-{0000000000}</displayFormat>
        <label>ATC Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATC Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>