force-app/main/default/objects/ATC_Communication__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared to Land</fullName>
            </value>
            <value>
                <fullName>Hold Position</fullName>
            </value>
            <value>
                <fullName>Runway Assigned</fullName>
            </value>
            <value>
                <fullName>Cleared to takeoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>